syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/linus18/sandbox/posting_api_grpc";

package posting_api_grpc;

service Posting {
  rpc CreatePosting (PostingRequest) returns (PostingReply) {}
}
message PostingRequest {
  string id = 1;
  google.protobuf.Timestamp posting_date = 2;
  string merchant = 3;
  int64 amount = 4;
  bool is_credit = 5;
  string account_id = 6;
}

message PostingReply {
  string response_code = 1;
}